--- a/JavaWebOrder/pom.xml
+++ b/JavaWebOrder/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
-  <dependencies>
+ <dependencies>
   <!-- JSTL -->
   <dependency>
     <groupId>jakarta.servlet.jsp.jstl</groupId>
@@ -18,6 +18,13 @@
     <artifactId>jakarta.servlet.jsp.jstl</artifactId>
     <version>3.0.0</version>
   </dependency>
+  
+  <!-- Lombok -->
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.38</version>
+	</dependency>
  	
 </dependencies>
 
