--- a/springboot-mvc/src/main/resources/application.properties
+++ b/springboot-mvc/src/main/resources/application.properties
@@ -9,6 +9,9 @@ server.port=8080
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
+# 啟用 hiddenmethod filter
+spring.mvc.hiddenmethod.filter.enabled=true
+
 # mysql 配置
 spring.datasource.url=jdbc:mysql://localhost:3306/web?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
