--- a/springboot-security/pom.xml
+++ b/springboot-security/pom.xml
@@ -30,12 +30,20 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-	
+		
+		<!-- 配置 Tomcat Web Server -->	
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+	    
+		<!-- JWT -->
 		<dependency>
 			<groupId>com.nimbusds</groupId>
-			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>9.15.1</version>
+	    	<artifactId>nimbus-jose-jwt</artifactId>
+	    	<version>9.15.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
