--- a/springboot-security/src/main/resources/application.properties
+++ b/springboot-security/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=springboot-security
+server.port=8080
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=12345678
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
